# datenbriefd

./: .gitignore  Cargo.toml
.github/: dependabot.yml
src/: lib.rs  mail.fmt  main.rs
src/tests/: mod.rs
