[package]
name = "datenbriefd"
version = "0.1.0"
authors = ["Kloenk <kloenk@kloenk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "completion" ]
completion = []

[dependencies]
clap = { version = "2.33.3", features = [ "color" ] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.7.0"
toml = "0.5.3"
serde_json = "1.0"
chrono = "0.4.9"